--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@ a:active,a:hover{outline:0}
 abbr[title]{border-bottom:1px dotted}
 b,strong{font-weight:bold}
 dfn{font-style:italic}
-h1{font-size:2em;margin:0.67em 0}
+h1,h2,h3,h4,h5{font-size:2em;margin:0.67em 0}
+h1,h2,h3,h4,h5{margin:0;padding:0}
 mark{background:#ff0;color:#000}
 small{font-size:80%}
 sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}
@@ -52,4 +53,14 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/*---------------------header------------------------*/
+
+.header {
+  position: sticky;
+  top: 0;
+  height: 60px;
+  background-color: #19181A;
+  color: white;
 }
