--- a/src/layout/style/index.scss
+++ b/src/layout/style/index.scss
@@ -255,12 +255,12 @@ code {
 
 .header {
   position: sticky;
-  height: auto;
   top: 0;
   background-color: #19181A;
   color: white;
-  padding: 2%;
+  padding: 3% 2%;
   transition: height 0.5s ease;
+  overflow: hidden;
 
   .headerGrid {
     display: grid;
@@ -275,7 +275,7 @@ code {
 
     .form {
       position: relative;
-      width: 95%;
+      width: 70%;
       margin: 0 auto;
       background: #00000085;
       border: 1px solid white;
@@ -322,7 +322,7 @@ code {
     h2 {
       font-size: 28px;
       font-family: Courgette;
-      margin-left: 19%;
+      margin-left: 4%;
 
     }
 
@@ -332,7 +332,7 @@ code {
     }
 
     .buttonMenu {
-      background-color: #000;
+      background-color: #1a181b;
       border: none;
 
       hr {
@@ -343,6 +343,34 @@ code {
         border-radius: 6px;
         transition: width 0.5s ease;
       }
+    }
+  }
+  ul {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    li {
+      font-size: 20px;
+      text-align: center;
+      border-bottom: 1px solid white;
+      border-top: 1px solid white;
+      border-radius: 8px;
+      margin-top: 3%;
+      padding: 10px;
+      font-family: Courgette;
+      transition: background-color 0.2s;
+      span {
+        color: rgb(146, 146, 45);
+      }
+    }
+    li:hover {
+      background-color: #322f33;
+      transition: background-color 0.2s;
+    }
+    li:active {
+      background-color: #3f3642;
+      transition: background-color 0.2s;
     }
   }
 
