--- a/src/layout/style/index.css
+++ b/src/layout/style/index.css
@@ -427,8 +427,64 @@ code {
   margin-left: 10px;
 }
 
-main img {
-  width: 70%;
-  border: 1px solid black;
+/*----main----------------------------------------------*/
+main .movies {
+  background-image: url("../img/backMovies.jpg");
+  background-position: center;
+  background-size: 100%;
+  padding: 15px 0;
 }
+
+main .movies .buttonShow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: auto;
+  background: none;
+  color: #d4d4d4;
+  font-size: 19px;
+  border: none;
+  padding: 5px 15px;
+  font-family: Courgette;
+  font-weight: 100;
+  text-decoration: underline;
+}
+
+main .movies .moviesContainer {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 90%;
+      grid-template-columns: 90%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 15px 0;
+}
+
+main .movies .moviesContainer .cardMovie {
+  border: 1px solid red;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+main .movies .moviesContainer .cardMovie img {
+  width: 80%;
+}
+
+/*----footer----------------------------------------------*/
+footer {
+  background-color: #19181A;
+  color: #797979;
+  padding: 5% 10%;
+  text-align: center;
+}
+
+footer hr {
+  border: none;
+  height: 1px;
+  background-color: #424242;
+}
+
+/*------loader----------------------------------------------------*/
 /*# sourceMappingURL=index.css.map */
