--- a/src/layout/style/index.css
+++ b/src/layout/style/index.css
@@ -451,25 +451,39 @@ main .movies .buttonShow {
 }
 
 main .movies .moviesContainer {
+  width: 100%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 90%;
-      grid-template-columns: 90%;
+  -ms-grid-columns: 85%;
+      grid-template-columns: 85%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 15px 0;
+  margin: 15px auto;
+  gap: 20px;
 }
 
 main .movies .moviesContainer .cardMovie {
-  border: 1px solid red;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  justify-items: center;
+  text-align: center;
+  border: 2px solid #707070;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.623);
+  color: white;
+  padding: 4% 0.5%;
+  font-family: sans-serif, serif;
+  font-size: 12px;
 }
 
 main .movies .moviesContainer .cardMovie img {
-  width: 80%;
+  width: 90%;
+  border: 2px solid #707070 hidden;
+  border-radius: 10px;
+  margin-bottom: 5px;
 }
 
 /*----footer----------------------------------------------*/
@@ -487,4 +501,62 @@ footer hr {
 }
 
 /*------loader----------------------------------------------------*/
+.parentLoader {
+  background-image: url("../img/backMovies.jpg");
+  background-position: center;
+  background-size: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 68vh;
+}
+
+.loader {
+  margin: auto;
+  border: 5px solid #00000000;
+  border-top: 3px solid white;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  -webkit-animation: spin 0.4s linear infinite;
+  animation: spin 0.4s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+/*---------notFoundMovie------------------------------*/
+.notFoundMovie {
+  background-image: url("../img/backMovies.jpg");
+  background-position: center;
+  background-size: 100%;
+  height: 68vh;
+}
+
+.notFoundMovie p {
+  margin: 0;
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  padding-top: 20px;
+}
 /*# sourceMappingURL=index.css.map */
