--- a/src/layout/style/index.scss
+++ b/src/layout/style/index.scss
@@ -427,17 +427,31 @@ main {
     }
 
     .moviesContainer {
+      width: 100%;
       display: grid;
-      grid-template-columns: 90%;
+      grid-template-columns: 85%;
       justify-content: center;
-      margin: 15px 0;
-
+      margin: 15px auto;
+      gap: 20px;
   
       .cardMovie{
-        border: 1px solid red;
-        justify-content: center;
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        text-align: center;
+        border: 2px solid rgb(112, 112, 112);
+        border-radius: 10px;
+        background-color: rgba(0, 0, 0, 0.623);
+        color: white;
+        padding: 4% 0.5%;
+        font-family: sans-serif, serif;
+        font-size: 12px;
+
         img {
-          width: 80%;
+          width: 90%;
+          border: 2px solid rgb(112, 112, 112) hidden;
+          border-radius: 10px;
+          margin-bottom: 5px;
         }
       }
     }
@@ -464,6 +478,61 @@ footer {
 }
 
 /*------loader----------------------------------------------------*/
-.loader{
-  
+.parentLoader{
+  background-image: url('../img/backMovies.jpg');
+  background-position: center;
+  background-size: 100%;
+  display: flex;
+  height: 68vh;
+}
+.loader {
+  margin: auto;
+  border: 5px solid #00000000;
+  border-top: 3px solid rgb(255, 255, 255);
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  -webkit-animation: spin 0.4s linear infinite;
+  animation: spin 0.4s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+
+/*---------notFoundMovie------------------------------*/
+
+.error {
+  background-image: url('../img/backMovies.jpg');
+  background-position: center;
+  background-size: 100%;
+  height: 68vh;
+  p {
+    margin: 0;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    padding-top: 20px;
+  }
 }
