--- a/src/layout/style/index.css
+++ b/src/layout/style/index.css
@@ -545,14 +545,14 @@ footer hr {
 }
 
 /*---------notFoundMovie------------------------------*/
-.notFoundMovie {
+.error {
   background-image: url("../img/backMovies.jpg");
   background-position: center;
   background-size: 100%;
   height: 68vh;
 }
 
-.notFoundMovie p {
+.error p {
   margin: 0;
   color: white;
   font-size: 20px;
