--- a/src/layout/style/index.css
+++ b/src/layout/style/index.css
@@ -486,6 +486,27 @@ main .movies .moviesContainer .cardMovie img {
   margin-bottom: 5px;
 }
 
+main .movies .moviesContainer .cardMovie h3 {
+  padding-right: 5%;
+  padding-left: 5%;
+}
+
+main .movie {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: 100vh;
+  color: #c0c0c0;
+}
+
+main .movie img {
+  width: 80%;
+}
+
+main .movie p {
+  margin: 0;
+}
+
 /*----footer----------------------------------------------*/
 footer {
   background-color: #19181A;
@@ -545,18 +566,4 @@ footer hr {
 }
 
 /*---------notFoundMovie------------------------------*/
-.error {
-  background-image: url("../img/backMovies.jpg");
-  background-position: center;
-  background-size: 100%;
-  height: 68vh;
-}
-
-.error p {
-  margin: 0;
-  color: white;
-  font-size: 20px;
-  text-align: center;
-  padding-top: 20px;
-}
 /*# sourceMappingURL=index.css.map */
