--- a/src/layout/style/index.scss
+++ b/src/layout/style/index.scss
@@ -310,12 +310,8 @@ code {
         right: 0;
         cursor: pointer;
       }
-
-      button:before {
-        content: "\27AB";
-        font-family: FontAwesome;
-        font-size: 30px;
-        color: #ffffff;
+      img {
+        margin-top: 30%;
       }
     }
 
@@ -338,6 +334,12 @@ code {
       margin-left: 4%;
       font-weight: 100;
       padding-top: 1px;
+    }
+    .backButton{
+      background-color: rgba(0, 0, 0, 0);
+      border: none;
+      padding: 5px 8px;
+      padding-bottom: 1px;
     }
 
     input {
