--- a/src/layout/style/index.css
+++ b/src/layout/style/index.css
@@ -281,22 +281,22 @@ code {
 }
 
 .header .headerGrid .form:hover {
-  background: #0a090a;
-  -webkit-transition: background 0.2s;
-  transition: background 0.2s;
+  background-color: #0a090a;
+  -webkit-transition: background-color 0.2s;
+  transition: background-color 0.2s;
 }
 
 .header .headerGrid .form {
   position: relative;
-  width: 75%;
+  width: 80%;
   margin: 0 auto;
-  background: #19181A;
+  background-color: #19181A;
   border: 1px solid white;
   border-radius: 4px;
   padding: 0 7px;
   margin-left: 0;
-  -webkit-transition: background 0.2s;
-  transition: background 0.2s;
+  -webkit-transition: background-color 0.2s;
+  transition: background-color 0.2s;
 }
 
 .header .headerGrid .form input,
