--- a/src/layout/style/index.css
+++ b/src/layout/style/index.css
@@ -288,7 +288,7 @@ code {
 
 .header .headerGrid .form {
   position: relative;
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   background-color: #19181A;
   border: 1px solid white;
@@ -328,9 +328,14 @@ code {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-right: 8%;
+  /* margin-left: 20%;*/
 }
 
 .header .headerGrid .search .buttonFilter {
+  /* left: 28%;
+        position: absolute;
+        z-index: 1;*/
   background-color: rgba(0, 0, 0, 0);
   color: white;
   border: none;
