--- a/src/layout/style/index.css
+++ b/src/layout/style/index.css
@@ -256,7 +256,7 @@ code {
   z-index: 1;
   background-color: #19181A;
   color: white;
-  padding: 3% 2%;
+  padding: 14px 10px;
   -webkit-transition: height 0.5s ease;
   transition: height 0.5s ease;
   overflow: hidden;
@@ -425,6 +425,24 @@ code {
   margin-left: 10px;
 }
 
+@media (min-width: 600px) {
+  .header .headerGrid .search {
+    width: 85%;
+  }
+}
+
+@media (min-width: 900px) {
+  .header .headerGrid .search {
+    width: 70%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .header .headerGrid .search {
+    width: 60%;
+  }
+}
+
 /*----main----------------------------------------------*/
 main .movies {
   background-image: url("../img/backMovies.jpg");
@@ -487,6 +505,9 @@ main .movies .moviesContainer .cardMovie img {
 main .movies .moviesContainer .cardMovie h3 {
   padding-right: 5%;
   padding-left: 5%;
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
 }
 
 main .movies .rank {
@@ -577,6 +598,89 @@ main .movie .plot p {
   font-size: 18px;
 }
 
+@media (min-width: 500px) {
+  main .movies .moviesContainer {
+    -ms-grid-columns: 70%;
+        grid-template-columns: 70%;
+  }
+  main .movies .rank {
+    margin-top: 1%;
+    margin-left: 9%;
+  }
+}
+
+@media (min-width: 600px) {
+  main .movies .moviesContainer {
+    -ms-grid-columns: 44% 44%;
+        grid-template-columns: 44% 44%;
+  }
+  main .movies .rank {
+    margin-top: 1%;
+    margin-left: 32%;
+  }
+}
+
+@media (min-width: 700px) {
+  main .movies .moviesContainer {
+    -ms-grid-columns: 40% 40%;
+        grid-template-columns: 40% 40%;
+  }
+  main .movies .rank {
+    margin-left: 33%;
+  }
+}
+
+@media (min-width: 800px) {
+  main .movies .moviesContainer {
+    -ms-grid-columns: 35% 35%;
+        grid-template-columns: 35% 35%;
+  }
+  main .movies .rank {
+    margin-left: 37%;
+  }
+}
+
+@media (min-width: 900px) {
+  main .movies .moviesContainer {
+    -ms-grid-columns: 29% 29% 29%;
+        grid-template-columns: 29% 29% 29%;
+  }
+  main .movies .rank {
+    margin-top: 0.5%;
+    margin-left: 41%;
+  }
+}
+
+@media (min-width: 1000px) {
+  main .movies .moviesContainer {
+    -ms-grid-columns: 26% 26% 26%;
+        grid-template-columns: 26% 26% 26%;
+  }
+  main .movies .rank {
+    margin-left: 44%;
+  }
+}
+
+@media (min-width: 1200px) {
+  main .movies .moviesContainer {
+    -ms-grid-columns: 23% 23% 23%;
+        grid-template-columns: 23% 23% 23%;
+  }
+  main .movies .rank {
+    margin-left: 46%;
+  }
+}
+
+@media (min-width: 1450px) {
+  main .movies .moviesContainer {
+    -ms-grid-columns: 20% 20% 20%;
+        grid-template-columns: 20% 20% 20%;
+  }
+  main .movies .rank {
+    margin-left: 47%;
+  }
+}
+
 /*----footer----------------------------------------------*/
 footer {
   background-color: #19181A;
@@ -590,6 +694,12 @@ footer hr {
   border: none;
   height: 1px;
   background-color: #424242;
+}
+
+@media (min-width: 900px) {
+  footer {
+    padding: 3% 20%;
+  }
 }
 
 /*------loader----------------------------------------------------*/
