--- a/src/layout/style/index.scss
+++ b/src/layout/style/index.scss
@@ -258,7 +258,7 @@ code {
   z-index: 1;
   background-color: #19181A;
   color: white;
-  padding: 3% 2%;
+  padding: 14px 10px;
   transition: height 0.5s ease;
   overflow: hidden;
 
@@ -413,6 +413,33 @@ code {
   }
 
 }
+@media (min-width: 600px) {
+  .header {
+    .headerGrid {
+      .search {
+        width: 85%;
+      }
+    }
+  }
+}
+@media (min-width: 900px) {
+  .header {
+    .headerGrid {
+      .search {
+        width: 70%;
+      }
+    }
+  }
+}
+@media (min-width: 1200px) {
+  .header {
+    .headerGrid {
+      .search {
+        width: 60%;
+      }
+    }
+  }
+}
 
 /*----main----------------------------------------------*/
 main {
@@ -466,10 +493,13 @@ main {
         h3 {
           padding-right: 5%;
           padding-left: 5%;
+          align-self: end;
         }
 
       }
     }
+
+
     .rank{
       position:absolute;
       background-color: #19181ae1;
@@ -566,6 +596,108 @@ main {
 
 }
 
+@media (min-width: 500px) {
+  main {
+    .movies {
+      .moviesContainer {
+        grid-template-columns: 70%;
+      }
+      .rank{
+        margin-top: 1%;
+        margin-left: 9%;
+
+      }
+    }
+  }
+}
+@media (min-width: 600px) {
+  main {
+    .movies {
+      .moviesContainer {
+        grid-template-columns: 44% 44%;
+      }
+      .rank{
+        margin-top: 1%;
+        margin-left: 32%;
+
+      }
+    }
+  }
+}
+@media (min-width: 700px) {
+  main {
+    .movies {
+      .moviesContainer {
+        grid-template-columns: 40% 40%;
+      }
+      .rank{
+        margin-left: 33%;
+      }
+    }
+  }
+}
+@media (min-width: 800px) {
+  main {
+    .movies {
+      .moviesContainer {
+        grid-template-columns: 35% 35%;
+      }
+      .rank{
+        margin-left: 37%;
+      }
+    }
+  }
+}
+@media (min-width: 900px) {
+  main {
+    .movies {
+      .moviesContainer {
+        grid-template-columns: 29% 29% 29%;
+      }
+      .rank{
+        margin-top: 0.5%;
+        margin-left: 41%;
+      }
+    }
+  }
+}
+@media (min-width: 1000px) {
+  main {
+    .movies {
+      .moviesContainer {
+        grid-template-columns: 26% 26% 26%;
+      }
+      .rank{
+        margin-left: 44%;
+      }
+    }
+  }
+}
+@media (min-width: 1200px) {
+  main {
+    .movies {
+      .moviesContainer {
+        grid-template-columns: 23% 23% 23%;
+      }
+      .rank{
+        margin-left: 46%;
+      }
+    }
+  }
+}
+@media (min-width: 1450px) {
+  main {
+    .movies {
+      .moviesContainer {
+        grid-template-columns: 20% 20% 20%;
+      }
+      .rank{
+        margin-left: 47%;
+      }
+    }
+  }
+}
+
 
 
 
@@ -583,6 +715,11 @@ footer {
     border: none;
     height: 1px;
     background-color: rgb(66, 66, 66);
+  }
+}
+@media (min-width: 900px) {
+  footer {
+    padding: 3% 20%;
   }
 }
 
