--- a/src/layout/style/index.scss
+++ b/src/layout/style/index.scss
@@ -310,6 +310,7 @@ code {
         right: 0;
         cursor: pointer;
       }
+
       img {
         margin-top: 30%;
       }
@@ -319,10 +320,10 @@ code {
     .search {
       display: flex;
       margin-right: 8%;
-     /* margin-left: 20%;*/
+      /* margin-left: 20%;*/
 
       .buttonFilter {
-       /* left: 28%;
+        /* left: 28%;
         position: absolute;
         z-index: 1;*/
         background-color: rgba(0, 0, 0, 0);
@@ -340,7 +341,8 @@ code {
       font-weight: 100;
       padding-top: 1px;
     }
-    .backButton{
+
+    .backButton {
       background-color: rgba(0, 0, 0, 0);
       border: none;
       padding: 5px 8px;
@@ -376,17 +378,13 @@ code {
     li {
       font-size: 20px;
       text-align: center;
-      border-bottom: 1px solid white;
-      border-top: 1px solid white;
-      border-radius: 8px;
-      margin-top: 3%;
+      border-bottom: 1px solid rgb(182, 182, 182);
+      border-top: 1px solid rgb(182, 182, 182);
+      border-radius: 4px;
+      margin-top: 14px;
       padding: 10px;
       font-family: Courgette;
       transition: background-color 0.2s;
-
-      span {
-        color: rgb(146, 146, 45);
-      }
     }
 
     .selected {
@@ -399,8 +397,8 @@ code {
   .labelDiv {
     width: 97%;
     padding: 4px;
-    border-bottom: 1px solid rgb(136, 136, 136);
-    border-radius: 8px;
+    border-bottom: 1px solid rgb(182, 182, 182);
+    border-radius: 4px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-items: center;
@@ -413,6 +411,7 @@ code {
   }
 
 }
+
 @media (min-width: 600px) {
   .header {
     .headerGrid {
@@ -420,8 +419,17 @@ code {
         width: 85%;
       }
     }
+    ul {
+      width: 65%;
+      margin: 0 auto;
+    }
+    .labelDiv {
+      width: 63%;
+    }
   }
+  
 }
+
 @media (min-width: 900px) {
   .header {
     .headerGrid {
@@ -429,14 +437,27 @@ code {
         width: 70%;
       }
     }
+    ul {
+      width: 55%;
+    }
+    .labelDiv {
+      width: 54%;
+    }
   }
 }
+
 @media (min-width: 1200px) {
   .header {
     .headerGrid {
       .search {
         width: 60%;
       }
+    }
+    ul {
+      width: 50%;
+    }
+    .labelDiv {
+      width: 49%;
     }
   }
 }
@@ -500,8 +521,8 @@ main {
     }
 
 
-    .rank{
-      position:absolute;
+    .rank {
+      position: absolute;
       background-color: #19181ae1;
       padding: 4px 10px;
       margin-top: 2%;
@@ -560,6 +581,7 @@ main {
           padding-left: 18%;
           padding-bottom: 10px;
         }
+
         td {
           color: #ffffff;
           padding: 3px 0;
@@ -585,8 +607,9 @@ main {
       background: #131313;
       color: rgb(240, 240, 240);
 
-      
+
       padding: 40px 50px;
+
       p {
         margin: 0;
         font-size: 18px;
@@ -596,13 +619,138 @@ main {
 
 }
 
+/* adaptive movie info */
+@media (min-width: 450px) {
+  main {
+    .movie {
+      .brightness {
+        img {
+          width: 50%;
+        }
+
+        h3 {
+          font-size: 22px;
+          margin-bottom: 30px;
+        }
+      }
+
+      .plot {
+        padding: 40px 100px;
+      }
+    }
+  }
+
+
+}
+
+@media (min-width: 600px) {
+  main {
+    .movie {
+      background-size: 100vw;
+
+      .brightness {
+        img {
+          width: 40%;
+        }
+
+        h3 {
+          margin-right: 10%;
+        }
+      }
+
+      .plot {
+        padding: 40px 120px;
+      }
+    }
+  }
+
+
+}
+
+@media (min-width: 700px) {
+  main {
+    .movie {
+      .brightness {
+        padding: 40px 15%;
+
+        img {
+          width: 35%;
+        }
+
+        table {
+          margin-left: 8%;
+          margin-right: 8%;
+        }
+
+      }
+
+      .plot {
+        padding: 40px 140px;
+      }
+    }
+  }
+
+
+}
+
+@media (min-width: 900px) {
+  main {
+    .movie {
+      .brightness {
+        padding: 50px 20%;
+      }
+
+      .plot {
+        padding: 40px 180px;
+      }
+    }
+  }
+
+
+}
+
+@media (min-width: 1100px) {
+  main {
+    .movie {
+      .brightness {
+        padding: 50px 25%;
+      }
+
+      .plot {
+        padding: 40px 25%;
+      }
+    }
+  }
+
+
+}
+
+@media (min-width: 1400px) {
+  main {
+    .movie {
+      .brightness {
+        padding: 50px 30%;
+      }
+
+      .plot {
+        padding: 40px 30%;
+      }
+    }
+  }
+
+
+}
+
+/* adaptive movies cards  */
+
 @media (min-width: 500px) {
   main {
     .movies {
       .moviesContainer {
         grid-template-columns: 70%;
       }
-      .rank{
+
+      .rank {
         margin-top: 1%;
         margin-left: 9%;
 
@@ -610,13 +758,15 @@ main {
     }
   }
 }
+
 @media (min-width: 600px) {
   main {
     .movies {
       .moviesContainer {
         grid-template-columns: 44% 44%;
       }
-      .rank{
+
+      .rank {
         margin-top: 1%;
         margin-left: 32%;
 
@@ -624,74 +774,86 @@ main {
     }
   }
 }
+
 @media (min-width: 700px) {
   main {
     .movies {
       .moviesContainer {
         grid-template-columns: 40% 40%;
       }
-      .rank{
+
+      .rank {
         margin-left: 33%;
       }
     }
   }
 }
+
 @media (min-width: 800px) {
   main {
     .movies {
       .moviesContainer {
         grid-template-columns: 35% 35%;
       }
-      .rank{
+
+      .rank {
         margin-left: 37%;
       }
     }
   }
 }
+
 @media (min-width: 900px) {
   main {
     .movies {
       .moviesContainer {
         grid-template-columns: 29% 29% 29%;
       }
-      .rank{
+
+      .rank {
         margin-top: 0.5%;
         margin-left: 41%;
       }
     }
   }
 }
+
 @media (min-width: 1000px) {
   main {
     .movies {
       .moviesContainer {
         grid-template-columns: 26% 26% 26%;
       }
-      .rank{
+
+      .rank {
         margin-left: 44%;
       }
     }
   }
 }
+
 @media (min-width: 1200px) {
   main {
     .movies {
       .moviesContainer {
         grid-template-columns: 23% 23% 23%;
       }
-      .rank{
+
+      .rank {
         margin-left: 46%;
       }
     }
   }
 }
+
 @media (min-width: 1450px) {
   main {
     .movies {
       .moviesContainer {
         grid-template-columns: 20% 20% 20%;
       }
-      .rank{
+
+      .rank {
         margin-left: 47%;
       }
     }
@@ -717,6 +879,7 @@ footer {
     background-color: rgb(66, 66, 66);
   }
 }
+
 @media (min-width: 900px) {
   footer {
     padding: 3% 20%;
@@ -775,6 +938,7 @@ footer {
   text-align: center;
   font-size: 40px;
   color: #ffffff;
+
   span {
     color: red;
     font-weight: 600;
