--- a/src/layout/style/index.css
+++ b/src/layout/style/index.css
@@ -233,6 +233,8 @@ th {
 
 /*-----------------------------------------------------*/
 body {
+  overflow-y: scroll;
+  overflow-x: auto;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -291,7 +293,7 @@ code {
   width: 100%;
   margin: 0 auto;
   background-color: #19181A;
-  border: 1px solid white;
+  border: 1px solid #cecece;
   border-radius: 4px;
   padding: 0 7px;
   margin-left: 0;
@@ -550,10 +552,17 @@ main .movie .brightness {
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
   padding: 30px;
+  display: -ms-grid;
+  display: grid;
+  grid-template: "poster title" "table table" / 60% 40%;
 }
 
-main .movie .brightness img {
-  width: 45%;
+main .movie .brightness .PosterMovieGrid {
+  grid-area: poster;
+}
+
+main .movie .brightness .PosterMovieGrid img {
+  width: 80%;
   border-radius: 7px;
   float: left;
   margin-left: 3%;
@@ -562,17 +571,18 @@ main .movie .brightness img {
   border: 2px solid black;
 }
 
-main .movie .brightness h3 {
+main .movie .brightness .TitleMovieGrid {
+  grid-area: title;
+}
+
+main .movie .brightness .TitleMovieGrid h3 {
   font-size: 22px;
   text-align: left;
   margin-bottom: 30px;
 }
 
-main .movie .brightness p {
-  margin: 0;
-}
-
 main .movie .brightness table {
+  grid-area: table;
   clear: both;
   margin-bottom: 15px;
   font-weight: 400;
@@ -594,12 +604,16 @@ main .movie .brightness table td {
 main .movie .brightness table .leftTb {
   text-align: right;
   padding-right: 8px;
-  font-weight: 500;
 }
 
 main .movie .brightness table .rightTb {
   padding-left: 8px;
   text-align: left;
+  font-weight: 700;
+}
+
+main .movie .brightness p {
+  margin: 0;
 }
 
 main .movie .plot {
@@ -615,9 +629,6 @@ main .movie .plot p {
 
 /* adaptive movie info */
 @media (min-width: 450px) {
-  main .movie .brightness img {
-    width: 50%;
-  }
   main .movie .brightness h3 {
     font-size: 22px;
     margin-bottom: 30px;
@@ -631,9 +642,6 @@ main .movie .plot p {
   main .movie {
     background-size: 100vw;
   }
-  main .movie .brightness img {
-    width: 40%;
-  }
   main .movie .brightness h3 {
     margin-right: 10%;
   }
@@ -646,9 +654,6 @@ main .movie .plot p {
   main .movie .brightness {
     padding: 40px 15%;
   }
-  main .movie .brightness img {
-    width: 35%;
-  }
   main .movie .brightness table {
     margin-left: 8%;
     margin-right: 8%;
@@ -660,7 +665,24 @@ main .movie .plot p {
 
 @media (min-width: 900px) {
   main .movie .brightness {
-    padding: 50px 20%;
+    padding: 30px 10%;
+    grid-template: "poster table" auto "title table" / 40% 55%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    row-gap: 20px;
+  }
+  main .movie .brightness .PosterMovieGrid img {
+    width: 100%;
+    margin: 0;
+  }
+  main .movie .brightness .TitleMovieGrid {
+    -ms-flex-item-align: start;
+        -ms-grid-row-align: start;
+        align-self: start;
+  }
+  main .movie .brightness .TitleMovieGrid h3 {
+    padding-left: 18%;
   }
   main .movie .plot {
     padding: 40px 180px;
@@ -669,7 +691,7 @@ main .movie .plot p {
 
 @media (min-width: 1100px) {
   main .movie .brightness {
-    padding: 50px 25%;
+    padding: 30px 20%;
   }
   main .movie .plot {
     padding: 40px 25%;
@@ -677,9 +699,6 @@ main .movie .plot p {
 }
 
 @media (min-width: 1400px) {
-  main .movie .brightness {
-    padding: 50px 30%;
-  }
   main .movie .plot {
     padding: 40px 30%;
   }
@@ -798,10 +817,11 @@ footer hr {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 68vh;
+  height: 85vh;
 }
 
 .loader {
+  position: relative;
   margin: auto;
   border: 5px solid #00000000;
   border-top: 3px solid white;
